# menkao-rainfall-chirps

./: AUTHORS.md  CITATION.cff  LICENSE  Makefile  README.md  VALIDATION.md  environment.yml  pyproject.toml
data/raw/: FINAL1981to2025_CHIRPS_Daily_Mean_Min_Max.xlsx  FINALCodeChirpsMENKAO.txt
scripts/: pack01_audit_climatology.py  pack02_trends_breaks.py  pack03_etccdi_extremes.py  pack04_gev_return_periods.py  pack05_quantile_regression.py  pack06_regime_shift_spi.py  pack07_ita.py  pack08_comparative_synthesis.py  run_all.py
src/menkao_analysis/: __init__.py  common.py
