[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menkao-rainfall-analysis"
version = "1.0.0"
description = "Reproducible CHIRPS rainfall analysis workflow for the Menkao region, Kinshasa (1981-2025)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Johnny Muhindo Bahavira" }
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "statsmodels",
  "openpyxl"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
